# ZenEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SetupGitmodules.bat  ZenEngine.sln
ZenCore/: CMakeLists.txt  ZenCore.vcxproj  ZenCore.vcxproj.filters
ZenCore/Include/: ObjectBase.h
ZenCore/Include/AssetLib/: FastGLTFLoader.h  GLTFLoader.h  TextureLoader.h  Types.h
ZenCore/Include/Common/: ArrayView.h  Base.h  BitField.h  ConditionVariable.h  Counter.h  Error.h  Errors.h  Exception.h  HashMap.h  Helpers.h  Intrusive.h  Logging.h  Math.h  MemAlloc.h  Memory.h  Mutex.h  ObjectBase.h  PagedAllocator.h  Queue.h  RefCountPtr.h  SharedPtr.h  SmallVector.h  SpinLock.h  ThreadPool.h  Types.h  UniquePtr.h
ZenCore/Include/Graphics/Common/: Color.h  Format.h
ZenCore/Include/Graphics/RHI/: DynamicRHI.h  RHICommandList.h  RHICommands.h  RHICommon.h  RHIDebug.h  RHIDefs.h  RHIOptions.h  RHIResource.h  RHIShaderUtil.h  ShaderUtil.h  ZenRHI.h
ZenCore/Include/Graphics/RenderCore/: RenderBuffers.h  RenderConfig.h  RenderContext.h  RenderDevice.h  RenderFrame.h  RenderGraph.h  ResourceCache.h  ShaderManager.h  TextureManager.h
ZenCore/Include/Graphics/Rendering/: RenderBuffers.h  RenderContext.h  RenderDevice.h  RenderFrame.h  RenderGraph.h  RenderGraphDefinitions.h  ResourceCache.h  ShaderManager.h  SyncObjPool.h  TextureManager.h
ZenCore/Include/Graphics/Types/: Frustum.h
ZenCore/Include/Graphics/Utils/: GLSLCompiler.h  ResourceCache.h  ResourceHashing.h  SpirvReflection.h
ZenCore/Include/Graphics/Val/: Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorSetLayout.h  Descriptors.h  Device.h  DeviceObject.h  DeviceResource.h  Fence.h  Framebuffer.h  GraphicsPipeline.h  Image.h  Instance.h  PhysicalDevice.h  PipelineLayout.h  PipelineState.h  Queue.h  RenderPass.h  Sampler.h  Semaphore.h  Shader.h  SpirvReflection.h  Swapchain.h  SyncObjPool.h  VulkanConfig.h  VulkanDebug.h  VulkanHeaders.h  VulkanStrings.h  ZenVal.h
ZenCore/Include/Graphics/Vulkan/: BufferVK.h  CommandPoolVK.h  CommandbufferVK.h  ContextVK.h  DescriptorPoolVK.h  DescriptorSetLayoutVK.h  DeviceContext.h  DeviceContextVK.h  DeviceResource.h  DeviceVK.h  Framebuffer.h  ImageVK.h  InstanceVK.h  PipelineLayoutVK.h  PipelineState.h  PipelineVK.h  RenderPassBuilder.h  RenderPassVK.h  ShaderModuleVK.h  SwapchainVK.h  WSIPlatform.h  ZenVulkan.h
ZenCore/Include/Graphics/VulkanRHI/: VulkanBuffer.h  VulkanCommandBuffer.h  VulkanCommandList.h  VulkanCommands.h  VulkanCommon.h  VulkanContext.h  VulkanDebug.h  VulkanDevice.h  VulkanExtension.h  VulkanMemory.h  VulkanPipeline.h  VulkanPlatformCommandList.h  VulkanQueue.h  VulkanRHI.h  VulkanRenderPass.h  VulkanResourceAllocator.h  VulkanSwapchain.h  VulkanSynchronization.h  VulkanTexture.h  VulkanTypes.h  VulkanViewport.h
ZenCore/Include/Math/: Math.h
ZenCore/Include/Memory/: LinearAllocator.h  Memory.h  PagedAllocator.h  PoolAllocator.h
ZenCore/Include/Platform/: ConfigLoader.h  FileSystem.h  GlfwWindow.h  InputController.h  NativeWindow.h  Timer.h
ZenCore/Include/SceneGraph/: AABB.h  Camera.h  Component.h  Light.h  Material.h  Mesh.h  Node.h  Sampler.h  Scene.h  SubMesh.h  Texture.h  Transform.h
ZenCore/Include/Systems/: Camera.h  Frustum.h  SceneEditor.h
ZenCore/Include/Templates/: ArenaVector.h  ArrayView.h  BitField.h  BitMask.h  HeapVector.h  ObjectPool.h  Queue.h  SmallVector.h
ZenCore/Include/Utils/: ConditionVariable.h  Errors.h  Helpers.h  Intrusive.h  Mutex.h  RefCountPtr.h  SharedPtr.h  SpinLock.h  ThreadPool.h  UniquePtr.h
ZenCore/Source/: ContextVK.cpp  SwapchainVK.cpp
ZenCore/Source/AssetLib/: FastGLTFLoader.cpp  GLTFLoader.cpp  TextureLoader.cpp
ZenCore/Source/Graphics/: BufferVK.cpp  CommandPoolVK.cpp  CommandbufferVK.cpp  ContextVK.cpp  DeviceVK.cpp  Framebuffer.cpp  ImageVK.cpp  RenderPassBuilder.cpp  RenderPassVK.cpp  SwapchainVK.cpp
ZenCore/Source/Graphics/RHI/: RHICommandList.cpp  RHIFactory.cpp
ZenCore/Source/Graphics/RenderCore/: RenderContext.cpp  RenderDevice.cpp  RenderFrame.cpp  RenderGraph.cpp  TextureManager.cpp
ZenCore/Source/Graphics/Rendering/: RenderContext.cpp  RenderDevice.cpp  RenderFrame.cpp  RenderGraph.cpp  SynObjPool.cpp  TextureManager.cpp
ZenCore/Source/Graphics/Utils/: GLSLCompiler.cpp  ResourceCache.cpp  SpirvReflection.cpp
ZenCore/Source/Graphics/Val/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorSetLayout.cpp  Descriptors.cpp  (+17 more)
ZenCore/Source/Memory/: Memory.cpp
ZenCore/Source/Platform/: FileSystem.cpp  GlfwWindow.cpp  InputController.cpp
ZenCore/Source/SceneGraph/: Camera.cpp  Scene.cpp  Transform.cpp
ZenCore/Source/Systems/: Camera.cpp  SceneEditor.cpp
ZenSamples/: CMakeLists.txt  ZenSamples.vcxproj  ZenSamples.vcxproj.filters
ZenSamples/Applications/: Application.h
ZenSamples/Applications/GLTFViewer/: Entry.cpp  GLTFViewer.cpp  GLTFViewer.h
ZenSamples/Applications/HelloTriangle/: Entry.cpp  HelloTriangle.cpp  HelloTriangle.h
ZenSamples/Applications/SceneGraphDemo/: Entry.cpp  SceneGraphDemo.cpp  SceneGraphDemo.h
ZenSamples/CommonTest/: LockTests.cpp  MemoryTests.cpp  PagedAllocatorTest.cpp  PagedAllocatorTest.h  SmallVectorTests.cpp
ZenSamples/SmartPtrTest/: IntrusivePtrTests.cpp  RefCountPtrTests.cpp  SharedPtrTests.cpp  UniquePtrTests.cpp  main.cpp
ZenSamples/ThreadPoolTest/: main.cpp
ZenSamples/VulkanRHIDemo/: Application.cpp  Application.h  RenderGraphDemo.cpp  RenderGraphDemo.h  ShaderUtilDemo.cpp  VulkanRHIDemo.cpp
ZenSamples/VulkanRHIDemo/Gears/: Gears.cpp  Gears.h
ZenSamples/VulkanRHIDemo/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.h
ZenSamples/VulkanRHIDemo/Offscreen/: Offscreen.cpp  Offscreen.h
ZenSamples/VulkanRHIDemo/PushConstants/: PushConstants.cpp  PushConstants.h
ZenSamples/VulkanRHIDemo/SceneRenderer/: SceneRendererDemo.cpp  SceneRendererDemo.h
ZenSamples/VulkanRHIDemo/ShadowMapping/: ShadowMapping.cpp  ShadowMapping.h
ZenSamples/VulkanRHIDemo/SpecializationConstants/: SpecializationConstants.cpp  SpecializationConstants.h
ZenSamples/ZenCoreTest/: 01LinkeTest.cpp  main.cpp
(+128 files in other folders)
